<resources>
    <string name="app_name">Chattous</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="broadcast">Broadcast</string>
    <string name="allfieldreq">All fields are required!</string>
    <string name="leastcharpass">Password must be at least 6 characters</string>

    <string name="cantreg">You can\'t register with this email or password</string>
    <string name="cantupload">Can\'t Upload</string>
    <string name="noimage">No Image selected</string>
    <string name="uploadinprog">Upload in progress</string>
    <string name="upload">Uploading</string>
    <string name="profilewidget">Active profile</string>

    <string name="search">Search...</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nomessage">No Message</string>

    <string name="imagebutton">Image Button</string>

    <string name="send">Send</string>
    <string name="writemsg">Write a message</string>
    <string name="typemsg">TYPE A MESSAGE!!!</string>

    <string name="fail">Failed</string>
    <string name="epi">Email or Password incorrect</string>

    <string name="authority">com.example.android.chattous.authority</string>
    <string name="sendbroadcast">Send a broadcast message</string>
    <string name="account_type">some.account.type.com</string>

    <string name="hello">Hello</string>
    <string name="edittexthint">Type your message here..</string>

    <string name="title_collection_widget">Chats</string>


</resources>
